[tool.poetry]
name = "pii detection and redaction"
version = "0.1.0"
description = "A Personally Identifiable Information Detection and Redaction Tool"
authors = ["Aventra (Harihar Jeevan)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"
pytesseract = "^0.3.13"
pillow = "^10.4.0"
cryptography = "^43.0.1"
pdf2image = "^1.17.0"
poppler-utils = "^0.1.0"
pymupdf = "^1.24.10"
reportlab = "^4.2.2"
presidio-analyzer = "^2.2.355"
presidio-anonymizer = "^2.2.355"
tk = "^0.1.0"
pdfplumber = "^0.11.4"
fpdf = "^1.7.2"
pikepdf = "^9.2.1"
opencv-python = "^4.10.0.84"
easyocr = "^1.7.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
